--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.imp changes
 0.14.1 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- Adapt Javascript so it can always be loaded (#11290).
 
 
 0.14.0 (2012-03-06)
