Back to development: 0.14.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.14.2 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.14.1 (2013-08-07)
 +++++++++++++++++++
 
