--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.14.3 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.14.2 (2013-08-14)
 +++++++++++++++++++
 
