--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.imp changes
 0.14.3 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- Fix event binding for mousemove (#12756).
 
 
 0.14.2 (2013-08-14)
