--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.imp changes
 ================
 
-0.14.4 (unreleased)
+0.15.0 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- Make available scales and colors context dependent (VIV-260).
 
 
 0.14.3 (2013-09-24)
