--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.15.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.15.0 (2014-01-07)
 +++++++++++++++++++
 
