--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.15.2 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.15.1 (2014-02-10)
 +++++++++++++++++++
 
