Back to development: 0.15.3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.15.3 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.15.2 (2014-03-10)
 +++++++++++++++++++
 
