Re VIV-358: Remove hard-coded assumptions about the image format/mime type (tested and thus supposed to work are JPEG and PNG)
This means that IMP should now basically support any image type PIL
supports (there might still be some assumptions left in
zeit.content.image or elswhere, though).

Add an assumption that PNGs use transparency (and thus handle them in
RGBA mode), while all other images are handled as RGB.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.imp changes
 0.15.3 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- Support PNG (with alpha) image format (VIV-358).
 
 
 0.15.2 (2014-03-10)
