Back to development: 0.16.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.16.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.16.0 (2014-05-22)
 +++++++++++++++++++
 
