--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.imp changes
 0.16.1 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- Fix bug in 0.16.0 that rendered imp unusable for gallery entries.
 
 
 0.16.0 (2014-05-22)
