Back to development: 0.16.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.16.2 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.16.1 (2014-07-14)
 +++++++++++++++++++
 
