Back to development: 0.17.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.17.1 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.17.0 (2014-10-21)
 +++++++++++++++++++
 
