--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.imp changes
 0.17.1 (unreleased)
 +++++++++++++++++++
 
-- Nothing changed yet.
+- Remove unicode symbol from i18n string, so it can be translated.
 
 
 0.17.0 (2014-10-21)
