--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.17.2 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.17.1 (2015-06-09)
 +++++++++++++++++++
 
