--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.17.3 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.17.2 (2016-01-22)
 +++++++++++++++++++
 
