--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.imp changes
 ================
 
+0.18.2 (unreleased)
++++++++++++++++++++
+
+- Nothing changed yet.
+
+
 0.18.1 (2016-09-29)
 +++++++++++++++++++
 
